    chroot.
  * When provisioning a container, output was buffered until the whole
    process was done; now output will be displayed immediately.
  * LightDM.autoLogin: Make it require LightDM.installed.
    (minor API change as the type changed)
  * Propellor.Property.XFCE added with some useful properties for the
    desktop environment.
  * Added File.applyPath property.
  * File.isCopyOf: Fix bug that prevented this property from working
    when the destination file did not yet exist.

 -- Joey Hess <id@joeyh.name>  Tue, 20 Jun 2017 10:55:37 -0400

propellor (4.0.6) unstable; urgency=medium

  * Fix bug that sometimes made --spin fail with 
    "fatal: Couldn't find remote ref HEAD"
  * Display error and warning messages to stderr, not stdout.

 -- Joey Hess <id@joeyh.name>  Sun, 18 Jun 2017 19:30:50 -0400

propellor (4.0.5) unstable; urgency=medium

  * Switch cabal file from Extensions to Default-Extensions to fix
    new picky hackage rejection.

 -- Joey Hess <id@joeyh.name>  Sat, 03 Jun 2017 15:07:36 -0400

propellor (4.0.4) unstable; urgency=medium

  * Propellor.Property.Restic added for yet another backup program.
    Thanks, Félix Sipma.
  * Removed dependency on MissingH, instead depends on split and hashable.

 -- Joey Hess <id@joeyh.name>  Sat, 03 Jun 2017 14:56:44 -0400

propellor (4.0.3) unstable; urgency=medium

  * Added Fstab.listed, Fstab.swap, and Mount.swapOn properties.
    Thanks, Daniel Brooks.
  * Added Propellor.Property.Bootstrap, which can be used to make
    disk images contain their own installation of propellor.

 -- Joey Hess <id@joeyh.name>  Thu, 20 Apr 2017 00:54:32 -0400

propellor (4.0.2) unstable; urgency=medium

  * Apt.mirror can be used to set the preferred apt mirror of a host,
    overriding the default CDN. This info is used by 
    Apt.stdSourcesList and Sbuild.builtFor.
    Thanks, Sean Whitton.
  * Property.Partition: Update kpartx output parser, as its output format